# Ribir

./: .claude.json  .gitignore  .mergify.yml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  RELEASE.md  ROADMAP.md  changelog.config.js  flake.nix  lib.rs  milestone.md  rclog_hook.sh  rustfmt.toml
algo/: Cargo.toml  README.md
algo/src/: cow_rc.rs  frame_cache.rs  id_map.rs  lib.rs  resource.rs  sc.rs
app/: Cargo.toml
app/src/: application.rs  event_loop.rs  lib.rs  shell_window.rs  window_builder.rs
app_winit/: Cargo.toml
app_winit/src/: application.rs  event_dispatcher.rs  from_cursor_icon.rs  from_device_id.rs  from_modifiers.rs  from_mouse.rs  from_virtual_key_code.rs  lib.rs  window.rs
canvas/: Cargo.toml  readme.md
canvas/.log/: readme.md
canvas/examples/: canvas_hello.rs
canvas/main_thread_tests/: canvas.gl.test.rs  canvas.test.rs  test_env.rs
canvas/src/: array_2d.rs  atlas.rs  builder_shaders.sh  canvas.rs  color.rs  ctx_2d.rs  error.rs  layer.rs  layer_2d.rs  lib.rs  mem_texture.rs  readme.md  tessellator.rs  text.rs  text_brush.rs  texture_atlas.rs  wgpu_render.rs
canvas/tests/: canvas.rs
cli/: Cargo.toml  README.md
cli/src/: bundle.rs  main.rs  program_check.rs  run_wasm.rs
cli/template/: index.html
core/: Cargo.toml
core/examples/: animation_demo.rs  todo.rs  todo_mvp.rs
core/src/: animation.rs  application.rs  assign_observable.rs  builtin_widgets.rs  clipboard.rs  composed_widget.rs  context.rs  convert.rs  cow_rc.rs  cursor_icon.rs  data_widget.rs  debug_tool.rs  declare.rs  decorator.rs  dynamic_widget.rs  enum_widget.rs  event_loop.rs  events.rs  lib.rs  local_sender.rs  logging.rs  overlay.rs  overlay_mgr.rs  pipe.rs  query.rs  render.rs  render_ctx.rs  render_helper.rs  render_object.rs  render_object_box.rs  reusable.rs  scheduler.rs  state.rs  stateful.rs  test.rs  test_helper.rs  theme.rs  ticker.rs  timer.rs  util.rs  (+5 more)
core/tests/: single_thread.rs
crossterm/: Cargo.toml
crossterm/src/: from_device_id.rs  from_element_state.rs  from_event.rs  from_keyboard_input.rs  from_modifiers.rs  from_mouse.rs  from_virtual_key_code.rs  from_window.rs  from_window_id.rs  lib.rs  shell_window.rs  window_builder.rs
dev-helper/: Cargo.toml  readme.md
dev-helper/src/: example_framework.rs  image_test.rs  lib.rs  painter_backend_eq_image_test.rs  unit_test_describe.rs  widget_layout_test.rs  widget_test.rs
examples/counter/: Cargo.toml  README.md  bundle.conf.json
examples/gallery/: Cargo.toml  README.md
examples/messages/: Cargo.toml  README.md
examples/pomodoro/: Cargo.toml  README.md
examples/storybook/: Cargo.toml  README.md
examples/todos/: Cargo.toml  README.md
examples/wordle_game/: Cargo.toml  README.md
geom/: Cargo.toml
geom/src/: lib.rs
geometry/: Cargo.toml
geometry/src/: lib.rs
gpu/: Cargo.toml  readme.md
gpu/examples/: canvas_hello.rs  wgpu-hello.rs
gpu/src/: atlas.rs  error.rs  gpu_backend.rs  lib.rs  mem_texture.rs  tessellator.rs  wgpu_gl.rs  wgpu_impl.rs
macros/: Cargo.toml  build.rs
macros/builtin/: Cargo.toml
macros/src/: asset.rs  builtin_fields_list.rs  child_template.rs  declare_derive.rs  declare_derive2.rs  declare_macro.rs  declare_obj.rs  distinct_pipe_macro.rs  dollar_macro.rs  error.rs  fn_widget_macro.rs  lerp_derive.rs  lib.rs  part_state.rs  part_writer.rs  pipe_macro.rs  rdl_macro.rs  simple_declare_attr.rs  symbol_process.rs  util.rs  variable_names.rs  watch_macro.rs  widget_attr_macro.rs  widget_macro.rs  widget_maybe_state_macro.rs  widget_try_track_macro.rs  writer_map_macro.rs
macros/tests/: animations_syntax_test.rs  child_template_derive_test.rs  code_gen_test.rs  declare_builder.rs  declare_test.rs  path_child_test.rs  test.rs
painter/: Cargo.toml  Cargo_BACKUP_877261.toml
painter/src/: color.rs  filter.rs  image.rs  lib.rs  painter.rs  path.rs  path_builder.rs  pixel_image.rs  style.rs  svg.rs  svg_parser.rs  svg_render.rs  text.rs
ribir/: Cargo.toml
ribir/examples/: animation_demo.rs  counter.rs  greet.rs  image.rs  message_list.rs  number_animate_transtion.rs  number_transition.rs  path_transition.rs  path_transtion.rs  storybook.rs  todo_mvp.rs  widget_examples.rs
ribir/src/: app.rs  backends.rs  clipboard.rs  lib.rs  platform.rs  timer.rs  winit_shell_wnd.rs
ribir/tests/: single_thread.rs  timer_test.rs
tests/: Cargo.toml  animations_syntax_test.rs  assets_test.rs  child_template_derive_test.rs  code_gen_test.rs  compile_message.rs  declare_builder_test.rs  declare_chain_test.rs  include_svg_test.rs  path_child_test.rs  rdl_macro_test.rs
tests/benches/: core_bench.rs  example_bench.rs  text_bench.rs  widgets_bench.rs
tests/compile_msg/: declare_builder_fail.stderr
text/: Cargo.toml
text/src/: attributed_text.rs  font.rs  font_db.rs  grapheme_cursor.rs  layout.rs  layouter.rs  lib.rs  paint.rs  paragraph.rs  parley_backend.rs  raster.rs  services.rs  shaper.rs  style.rs  svg_font_document.rs  svg_glyph.rs  svg_glyph_cache.rs  text_render.rs  text_reorder.rs  text_writer.rs  typography.rs  typography_cache.rs  typography_store.rs  unicode_help.rs
themes/material/: Cargo.toml
types/: Cargo.toml
types/src/: box_clamp.rs  color.rs  lib.rs
widget_derive/: Cargo.toml  build.rs
widget_derive/src/: attach_attr_derive.rs  attr_fields.rs  builtin_fields_list.rs  combination.rs  combination_derive.rs  declare_derive.rs  declare_func_derive.rs  error.rs  lerp_derive.rs  lib.rs  multi_derive.rs  proxy_derive.rs  render_derive.rs  single_derive.rs  state.rs  state_derive.rs  state_partial_eq_derive.rs  stateful_derive.rs  util.rs  widget_attr_macro.rs  widget_derive.rs  widget_try_track_macro.rs
widget_derive/tests/: animations_syntax_test.rs  declare_builder.rs  declare_test.rs  test.rs
widgets/: Cargo.toml
widgets/src/: animation.rs  avatar.rs  badge.rs  button.rs  buttons.rs  checkbox.rs  clip.rs  common_widget.rs  divider.rs  grid_view.rs  icon.rs  input.rs  label.rs  layout.rs  lib.rs  link.rs  list.rs  lists.rs  menu.rs  navigation_rail.md  navigation_rail.rs  overlay.rs  path.rs  (+14 more)
winit/: Cargo.toml
(+891 files in other folders)
