[workspace]
exclude = ["examples/attachments", "tools/mcp-adapter"]
members = [
  "core",
  "gpu",
  "painter",
  "macros",
  "algo",
  "widgets",
  "ribir",
  "themes/*",
  "geom",
  "tests",
  "dev-helper",
  "examples/*",
  "tools/*",
]
# Default members to build when running `cargo build` without `-p`.
# tools/* are excluded from default builds.
default-members = [
  "core",
  "gpu",
  "painter",
  "macros",
  "algo",
  "widgets",
  "ribir",
  "themes/*",
  "geom",
  "tests",
  "dev-helper",
  "examples/*",
]
resolver = "2"

[profile.bench]
debug = true

[profile.release]
lto = true
strip = true
codegen-units = 1
opt-level = "z"


[workspace.package]
authors = ["RibirX<Adoo@outlook.com>"]
categories = ["gui"]
description = "A non-intrusive declarative GUI framework, to build modern native/wasm cross-platform applications."
documentation = "https://ribir.org/docs/introduction"
edition = "2024"
homepage = "https://ribir.org"
keywords = ["gui", "ui", "declarative", "compose-ui"]
license = "MIT"
readme = "README.md"
version = "0.4.0-alpha.57"
rust-version = "1.92.0"

[workspace.dependencies]
ribir_algo = { path = "algo", version = "0.4.0-alpha.57" }
ribir_core = { path = "core", version = "0.4.0-alpha.57", default-features = false }
ribir_gpu = { path = "gpu", version = "0.4.0-alpha.57" }
ribir_geom = { path = "geom", version = "0.4.0-alpha.57" }
ribir_macros = { path = "macros", version = "0.4.0-alpha.57" }
ribir_painter = { path = "painter", version = "0.4.0-alpha.57" }
ribir_widgets = { path = "widgets", version = "0.4.0-alpha.57" }
ribir_material = { path = "themes/material", version = "0.4.0-alpha.57" }
ribir_slim = { path = "themes/ribir_slim", version = "0.4.0-alpha.57" }
ribir_dev_helper = { path = "dev-helper", version = "0.4.0-alpha.57" }
ribir = { path = "ribir", version = "0.4.0-alpha.57" }
ahash = "0.8.11"
arboard = "3.2.0"
bitflags = "2.6.0"
colored = "3.0.0"
derive_more = "2.0.1"
dssim-core = "3.2.9"
env_logger = "0.11.8"
euclid = "0.22.11"
fontdb = "0.23.0"
futures = "0.3.26"
guillotiere = "0.6.0"
image = { version = "0.25.6", default-features = false, features = ["rayon"] }
image-webp = "0.2"
webp-animation = "0.9"
indextree = { version = "4.7.3", features = ["deser"] }
log = "0.4.27"
lyon_algorithms = "1.0.5"
lyon_geom = "1.0.6"
lyon_path = "1.0.7"
lyon_tessellation = "1.0.15"
material-colors = "0.4.2"
paste = "1.0"
pin-project-lite = "0.2.15"
proc-macro2 = "1.0.101"
quote = "1.0.37"
rayon = "1.10.0"
rustybuzz = "0.20.1"
rxrust = "1.0.0-rc.1"
scoped_threadpool = "0.1.9"
rclite = "0.4.1"
serde = "1.0"
serde_json = "1.0.82"
smallvec = "1.15.0"
syn = "2.0.87"
unicode-bidi = "0.3.7"
unicode-script = "0.5.4"
unicode-segmentation = "1.9.0"
usvg = { version = "0.45.0", default-features = false }
wgpu = { version = "28.0.0", features = ["webgl"] }
winit = { version = "0.30.11", default-features = false, features = [
  "x11",
  "wayland",
  "wayland-dlopen",
  "rwh_06",
] }
zerocopy = "0.7.3"
quick-xml = "0.38.4"
tokio = { version = "1.0" }

# Logging / telemetry (used by debug server)
tracing = "0.1.41"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt", "registry"] }
tokio-stream = { version = "0.1.17", features = ["sync", "time"] }
dirs = "5.0"

priority-queue = "2.1.1"
web-sys = { version = "0.3.69", features = ["HtmlCollection"] }
heck = "0.5.0"
url = "2.5.4"
thiserror = "2.0.12"
wasm-bindgen-futures = "0.4.50"
getrandom-v3 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }
cfg-if = "1.0"
