[workspace]
exclude = ["examples/attachments", "tools/mcp-adapter"]
members = [
  "core",
  "text",
  "gpu",
  "painter",
  "macros",
  "algo",
  "widgets",
  "ribir",
  "themes/*",
  "types",
  "tests",
  "dev-helper",
  "examples/*",
  "tools/*",
]
# Default members to build when running `cargo build` without `-p`.
# tools/* are excluded from default builds.
default-members = [
  "core",
  "text",
  "gpu",
  "painter",
  "macros",
  "algo",
  "widgets",
  "ribir",
  "themes/*",
  "types",
  "tests",
  "dev-helper",
  "examples/*",
]
resolver = "2"

[profile.bench]
debug = true

[profile.release]
lto = true
strip = true
codegen-units = 1
opt-level = "z"


[workspace.package]
authors = ["RibirX<Adoo@outlook.com>"]
categories = ["gui"]
description = "A non-intrusive declarative GUI framework, to build modern native/wasm cross-platform applications."
documentation = "https://ribir.org/docs/introduction"
edition = "2024"
homepage = "https://ribir.org"
keywords = ["gui", "ui", "declarative", "compose-ui"]
license = "MIT"
readme = "README.md"
version = "0.4.0-alpha.62"
rust-version = "1.92.0"

[workspace.dependencies]
ribir_algo = { path = "algo", version = "0.4.0-alpha.62" }
ribir_core = { path = "core", version = "0.4.0-alpha.62", default-features = false }
ribir_gpu = { path = "gpu", version = "0.4.0-alpha.62" }
ribir_types = { path = "types", version = "0.4.0-alpha.62" }
ribir_macros = { path = "macros", version = "0.4.0-alpha.62" }
ribir_painter = { path = "painter", version = "0.4.0-alpha.62" }
ribir_text = { path = "text", version = "0.4.0-alpha.62" }
ribir_widgets = { path = "widgets", version = "0.4.0-alpha.62" }
ribir_material = { path = "themes/material", version = "0.4.0-alpha.62" }
ribir_slim = { path = "themes/ribir_slim", version = "0.4.0-alpha.62" }
ribir_dev_helper = { path = "dev-helper", version = "0.4.0-alpha.62" }
ribir = { path = "ribir", version = "0.4.0-alpha.62" }
ahash = "0.8.11"
arboard = "3.2.0"
bitflags = "2.6.0"
colored = "3.0.0"
derive_more = "2.0.1"
dssim-core = "3.2.9"
euclid = "0.22.11"
futures = "0.3.26"
guillotiere = "0.7.0"
image = { version = "0.25.6", default-features = false, features = ["rayon"] }
# Keep both crates for now:
# - `image-webp` handles runtime decode and single-frame encode paths
# - `webp-animation` remains the compile-time animated WebP encoder in `ribir_macros`
image-webp = "0.2"
webp-animation = { version = "0.9", features = ["static"] }
indextree = { version = "4.7.3", features = ["deser"] }
lyon_algorithms = "1.0.5"
lyon_geom = "1.0.6"
lyon_path = "1.0.7"
lyon_tessellation = "1.0.15"
material-colors = "0.4.2"
paste = "1.0"
pin-project-lite = "0.2.15"
proc-macro2 = "1.0.101"
quote = "1.0.37"
rayon = "1.10.0"
rxrust = "1.0.0-rc.1"
scoped_threadpool = "0.1.9"
rclite = "0.4.1"
serde = "1.0"
serde_json = "1.0.82"
smallvec = "1.15.0"
syn = "2.0.87"
unicode-segmentation = "1.9.0"
usvg = { version = "0.45.0", default-features = false }
wgpu = { version = "29.0.0", features = ["webgl"] }
# Keep workspace `winit` minimal so wasm targets don't inherit desktop backends.
# Desktop-only backends are enabled by leaf crates that actually open native windows.
winit = { version = "0.30.11", default-features = false, features = [
  "rwh_06",
] }
zerocopy = "0.7.3"
quick-xml = "0.38.4"
tokio = { version = "1.0", default-features = false }
swash = "0.1.18"
read-fonts = "0.22.7"
font-types = "0.7.3"
parley = "0.8.0"

# Logging / telemetry (used by debug server)
tracing = { version = "0.1.41", features = ["log"] }
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt", "registry"] }
tokio-stream = { version = "0.1.17", features = ["sync", "time"] }
dirs = "5.0"

web-sys = { version = "0.3.69", features = ["HtmlCollection"] }
heck = "0.5.0"
url = "2.5.4"
thiserror = "2.0.12"
wasm-bindgen-futures = "0.4.50"
getrandom-v3 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }
cfg-if = "1.0"
