[package]
categories = ["gui"]
description = "Ribir is a framework for building modern native/wasm cross-platform user interface applications."
documentation = "https://ribir.org/docs"
edition = "2021"
homepage = "https://ribir.org"
keywords = ["gui", "ui", "declarative", "compose-ui"]
license = "MIT"
name = "ribir_algo"
readme = "README.md"
repository = "https://github.com/RibirX/Ribir/algo"
version = "0.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.3"
log = "0.4.14"
rayon = "1.5.1"
