[package]
authors.workspace = true
categories.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "ribir_algo"
readme.workspace = true
repository = "https://github.com/RibirX/Ribir/algo"
version.workspace = true

[dependencies]
ahash = "0.8.3"
log = "0.4.14"
rayon = "1.5.1"
