[package]
authors.workspace = true
categories.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "ribir_algo"
readme.workspace = true
repository = "https://github.com/RibirX/Ribir/algo"
version.workspace = true

[dependencies]
triomphe.workspace = true
ahash.workspace = true
log.workspace = true
serde = {workspace = true, features = ["derive", "rc"]}

[dev-dependencies]
scoped_threadpool.workspace = true
