[package]
name = "ribir_app_winit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
ribir_painter = { path = "../painter" }
ribir_core = { path = "../core" }
ribir_gpu = { path = "../gpu" }
winit = "0.28.1"

[dev-dependencies]
ribir_core = { path = "../core", features = ["test-utils"]}

[features]
defautl = ["wgpu_gl"]
wgpu_gl = ["ribir_gpu/wgpu_gl"]
