[package]
name = "canvas"
version = "0.1.0"
authors = ["adoo <Adoo@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = { git="https://github.com/gfx-rs/wgpu-rs.git", version ="*" }
lyon =  { git = "https://github.com/nical/lyon", version="*"}
palette = "0.5"
raw-window-handle = "0.3.3"
euclid = "0.20.11"
png = "0.16.3"
guillotiere ="0.5.1"
zerocopy = "0.3"
glyph_brush = {git="https://github.com/alexheretic/glyph-brush.git", path="glyph-brush", branch="is-cached", version="*"}
log = "0.4.8"
backtrace = "0.3"
smallvec = "1.4.0"

[target.'cfg(debug_assertions)'.dependencies]
futures="0.3.5"

[dev-dependencies]
winit="0.22.1"
futures="0.3.4"
env_logger = "0.7.1"
unit_test = {path ="../unit_test"}