[package]
authors = ["adoo <Adoo@outlook.com>"]
edition = "2018"
name = "canvas"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
backtrace = "0.3"
euclid = "0.22.0"
font-kit = "0.10.0"
glyph_brush = "0.7.0"
guillotiere = "0.6.0"
log = "0.4.8"
lyon = {git = "https://github.com/nical/lyon", version = "*"}
png = "0.16.7"
raw-window-handle = "0.3.3"
wgpu = "0.6.0"
zerocopy = "0.3"

[dev-dependencies]
env_logger = "0.7.1"
futures = "0.3.5"
unit_test = {path = "../unit_test"}
winit = "0.24.0"
