[package]
authors.workspace = true
categories.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "ribir_core"
readme.workspace = true
repository = "https://github.com/RibirX/Ribir/core"
version.workspace = true

[dependencies]
ahash.workspace = true
bitflags.workspace = true
blake3 = {workspace = true, features = ["rayon"]}
futures.workspace = true
indextree.workspace = true
lazy_static.workspace = true
log.workspace = true
lyon_geom.workspace = true
once_cell.workspace = true
paste.workspace = true
pin-project-lite.workspace = true
ribir_algo = {path = "../algo", version = "0.3.0-alpha.3" }
ribir_geom = {path = "../geom", version = "0.3.0-alpha.3" }
ribir_macros = {path = "../macros", version = "0.3.0-alpha.3" }
ribir_painter = {path = "../painter", version = "0.3.0-alpha.3" }
ribir_text = {path = "../text", version = "0.3.0-alpha.3" }
rxrust.workspace = true
smallvec.workspace = true
winit.workspace = true
tokio = { workspace = true, optional = true, features = ["rt-multi-thread", "rt"]}
priority-queue = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys.workspace = true
web-time.workspace = true

[dev-dependencies]
colored.workspace = true
paste.workspace = true
ribir_dev_helper = {path = "../dev-helper"}
ribir = { path = "../ribir" }
tokio = { workspace = true, features = ["full"]}
tokio-stream = { workspace = true }

[features]
png = ["ribir_painter/png"]
tokio-async = ["tokio"]
nightly = ["ribir_macros/nightly"]


