[package]
authors.workspace = true
categories.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "ribir_core"
readme.workspace = true
repository = "https://github.com/RibirX/Ribir/core"
version.workspace = true

[dependencies]
ahash.workspace = true
bitflags.workspace = true
futures.workspace = true
indextree.workspace = true
log.workspace = true
lyon_geom.workspace = true
paste.workspace = true
triomphe.workspace = true
pin-project-lite.workspace = true
ribir_algo = {path = "../algo", version = "0.4.0-alpha.53" }
ribir_geom = {path = "../geom", version = "0.4.0-alpha.53" }
ribir_macros = {path = "../macros", version = "0.4.0-alpha.53" }
ribir_painter = {path = "../painter", version = "0.4.0-alpha.53" }
rxrust.workspace = true
smallvec.workspace = true
winit.workspace = true
priority-queue = { workspace = true }
url.workspace = true
futures-timer = { version = "3.0.3", optional = true }
cfg-if.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "rt", "time", "macros", "sync"]}

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { workspace = true, features = ["Location", "Window", "History"]}
tokio = { workspace = true, features = ["rt", "sync", "macros"]}
gloo-timers = { version = "0.3.0", features = ["futures"] }
wasm-bindgen-futures.workspace = true

[dev-dependencies]
colored.workspace = true
paste.workspace = true
ribir_dev_helper = {path = "../dev-helper"}
ribir = { path = "../ribir", features = ["material"] }
ribir_slim = { path = "../themes/ribir_slim" }
ribir_core = { path = "../core", features = ["test-utils"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3.42"

[features]
png = ["ribir_painter/png"]
jpeg = ["ribir_painter/jpeg"]
nightly = []
test-utils = []
