[package]
authors.workspace = true
categories.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "ribir_dev_helper"
repository = "https://github.com/RibirX/Ribir/test-helper"
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures.workspace = true
ribir_geom = {path = "../geom", version = "0.4.0-alpha.28" }
ribir_gpu = {path = "../gpu", version = "0.4.0-alpha.28" }
ribir_painter = {path = "../painter", features = ["png"], version = "0.4.0-alpha.28" }
image.workspace = true
dssim-core.workspace = true

[dev-dependencies]
colored.workspace = true
