[package]
authors.workspace = true
categories.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "ribir_dev_helper"
repository = "https://github.com/RibirX/Ribir/test-helper"
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures.workspace = true
ribir_geom = { workspace = true }
ribir_gpu = { workspace = true }
ribir_painter = { workspace = true, features = ["png"] }
image.workspace = true
dssim-core.workspace = true

[dev-dependencies]
colored.workspace = true
