[package]
authors.workspace = true
categories.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "ribir_dev_helper"
repository = "https://github.com/RibirX/Ribir/test-helper"
version.workspace = true

[dependencies]
futures.workspace = true
ribir_types = { workspace = true }
ribir_gpu = { workspace = true }
ribir_painter = { workspace = true }
dssim-core.workspace = true

[dev-dependencies]
colored.workspace = true
