[package]
categories = ["gui"]
description = "Ribir is a framework for building modern native/wasm cross-platform user interface applications."
documentation = "https://ribir.org/docs"
edition = "2021"
homepage = "https://ribir.org"
keywords = ["gui", "ui", "declarative", "compose-ui"]
license = "MIT"
name = "ribir_geometry"
repository = "https://github.com/RibirX/Ribir/geometry"
version = "0.0.0"

[dependencies]
euclid = "0.22.6"
