[package]
authors.workspace = true
categories.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "ribir_gpu"
readme.workspace = true
repository = "https://github.com/RibirX/Ribir/gpu"
version.workspace = true

[dependencies]
ahash.workspace = true
tokio = {workspace = true, optional = true, features=["sync"]}
guillotiere.workspace = true
tracing.workspace = true
rayon.workspace = true
ribir_algo = { workspace = true }
ribir_geom = { workspace = true }
ribir_painter = { workspace = true, features = ["tessellation"] }
slab = "0.4.9"
wgpu = {workspace = true, optional = true}
zerocopy = {workspace=true, features = ["derive"]}

[dev-dependencies]
paste.workspace = true
ribir_dev_helper = {path = "../dev-helper"}
futures.workspace = true

[features]
default = ["wgpu"]
wgpu = ["dep:wgpu", "tokio"]
