[package]
authors.workspace = true
categories.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "ribir_macros"
readme.workspace = true
repository = "https://github.com/RibirX/Ribir/macros"
version.workspace = true

[lib]
proc-macro = true

[dependencies]
Inflector.workspace = true
ahash.workspace = true
bitflags.workspace = true
lazy_static.workspace = true
proc-macro2.workspace = true
quote.workspace = true
ribir_builtin = {path = "./builtin", version = "0.0.1-alpha.4" }
ribir_painter = {path = "../painter", version = "0.0.1-alpha.4" }
smallvec.workspace = true
syn = {workspace = true, features = ["visit-mut", "full", "extra-traits"]}

[build-dependencies]
ribir_builtin = {path = "./builtin", version = "0.0.1-alpha.4" }
