[package]
authors.workspace = true
categories.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "ribir_macros"
readme.workspace = true
repository = "https://github.com/RibirX/Ribir/macros"
version.workspace = true

[lib]
proc-macro = true

[dependencies]
ahash.workspace = true
bitflags.workspace = true
proc-macro2.workspace = true
quote.workspace = true
ribir_painter = {path = "../painter", version = "0.4.0-alpha.28" }
smallvec = { workspace = true, features= ["drain_filter"] }
syn = { workspace = true, features = ["fold", "full", "extra-traits"]}
phf = { workspace = true, features = ["macros"] }
heck.workspace = true


[features]
nightly = []
