[package]
authors.workspace = true
categories.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "ribir_macros"
readme.workspace = true
repository = "https://github.com/RibirX/Ribir/macros"
version.workspace = true

[lib]
proc-macro = true

[dependencies]
ahash.workspace = true
bitflags.workspace = true
image = { workspace = true, features = ["png", "jpeg", "gif", "bmp", "webp"] }
proc-macro2.workspace = true
quote.workspace = true
ribir_painter = { workspace = true }
smallvec = { workspace = true, features= ["drain_filter"] }
syn = { workspace = true, features = ["fold", "full", "extra-traits"]}
heck.workspace = true
webp-animation.workspace = true
