[package]
authors.workspace = true
categories.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "ribir_painter"
readme.workspace = true
repository = "https://github.com/RibirX/Ribir/painter"
version.workspace = true

[dependencies]
bitflags = "2.3.0"
image = {workspace = true, optional = true}
log.workspace = true
lyon_algorithms = {version = "1.0.3", features = ["serialization"]}
lyon_tessellation = {version = "1.0.3", features = ["serialization"], optional = true}
material-color-utilities-rs = {workspace = true}
ribir_algo = {path = "../algo", version = "0.4.0-alpha.28" }
ribir_geom = {path = "../geom", version = "0.4.0-alpha.28" }
serde = {version = "1.0", features = ["derive"]}
serde_json.workspace = true
usvg.workspace = true
zerocopy = {workspace = true, optional = true, features = ["derive"]}
derive_more= {workspace = true, features = ["add", "add_assign", "not", "mul"]} 
smallvec.workspace = true
fontdb.workspace = true
rustybuzz.workspace = true
unicode-bidi.workspace = true
unicode-script.workspace = true
unicode-segmentation.workspace = true
quick-xml.workspace = true
ahash.workspace = true
triomphe.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom.workspace = true

[features]
png = ["image/png"]
tessellation = ["lyon_tessellation", "zerocopy"]
