[package]
authors.workspace = true
categories.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "ribir_painter"
readme.workspace = true
repository = "https://github.com/RibirX/Ribir/painter"
version.workspace = true

[dependencies]
bitflags.workspace = true
image-webp.workspace = true
tracing.workspace = true
lyon_algorithms = { workspace = true, features = ["serialization"] }
lyon_tessellation = { workspace = true, features = ["serialization"], optional = true }
material-colors.workspace = true
ribir_algo = { workspace = true }
ribir_types = { workspace = true }
ribir_text = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
usvg.workspace = true
zerocopy = { workspace = true, optional = true, features = ["derive"] }
derive_more = { workspace = true, features = ["add", "add_assign", "not", "mul"] }
smallvec = { workspace = true, features = ["serde"] }
ahash.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom-v3.workspace = true

[features]
tessellation = ["lyon_tessellation", "zerocopy"]
