[package]
authors.workspace = true
categories.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "ribir"
readme.workspace = true
repository = "https://github.com/RibirX/Ribir"
version.workspace = true

[dependencies]
ribir_algo = { path = "../algo", version = "0.4.0-alpha.46" }
ribir_core = { path = "../core", version = "0.4.0-alpha.46", default-features = false }
ribir_gpu = { path = "../gpu", version = "0.4.0-alpha.46" }
ribir_material = { path = "../themes/material", version = "0.4.0-alpha.46", optional = true }
ribir_widgets = { path = "../widgets", version = "0.4.0-alpha.46", optional = true }
rxrust.workspace = true
wgpu = { workspace = true, optional = true }
winit.workspace = true
futures.workspace = true
pin-project-lite.workspace = true
cfg-if.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
arboard.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "rt", "sync"]}


[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys.workspace = true
tokio = { workspace = true, features = ["rt", "sync"]}


[target.'cfg(target_os = "macos")'.dependencies]
icrate = { workspace = true, features = [
  "Foundation",
  "Foundation_NSAppleEventManager",
  "objective-c",
  "AppKit",
  "AppKit_NSEvent",
] }
macos-accessibility-client = { workspace = true }

[dev-dependencies]
colored.workspace = true
env_logger.workspace = true
futures.workspace = true
ribir_dev_helper = { path = "../dev-helper" }
ribir_material = { path = "../themes/material" }
ribir_core = { path = "../core", default-features = false, features=["test-utils"]  }

[features]
default = ["wgpu", "widgets", "material", "png", "jpeg"]
material = ["ribir_material"]
png = ["ribir_core/png"]
jpeg = ["ribir_core/jpeg"]
wgpu = ["ribir_gpu/wgpu", "dep:wgpu"]
widgets = ["ribir_widgets"]
nightly = ["ribir_core/nightly"]

[target.'cfg(windows)'.dependencies]
winapi = "0.3.9"

[package.metadata.release]
tag = true
pre-release-replacements = [
  {file="../CHANGELOG.md", search="@Unreleased", replace="{{version}}", prerelease = true},
  {file="../CHANGELOG.md", search="\\.\\.\\.HEAD", replace="...{{tag_name}}", min=0, prerelease = true},
  {file="../CHANGELOG.md", search="@ReleaseDate", replace="{{date}}", prerelease = true},
  {file="../CHANGELOG.md", search="<!-- next-header -->", replace="<!-- next-header -->\n\n## [@Unreleased] - @ReleaseDate", exactly=1, prerelease = true},
  {file="../CHANGELOG.md", search="<!-- next-url -->", replace="<!-- next-url -->\n[@Unreleased]: https://github.com/RibirX/Ribir/compare/{{tag_name}}...HEAD", exactly=1, prerelease = true},
]
