[package]
authors.workspace = true
categories.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "tests"
publish = false
readme.workspace = true
repository = "https://github.com/RibirX/Ribir/tests"
version.workspace = true

[dev-dependencies]
ribir = {path = "../ribir", default-features = false, features = ["material", "widgets"]}
trybuild = "1.0.77"
winit = "0.28.6"

[[test]]
name = "compile_message"
path = "compile_message.rs"

[[test]]
name = "code_gen_logic"
path = "code_gen_test.rs"

[[test]]
name = "animations_syntax"
path = "animations_syntax_test.rs"

[[test]]
name = "child_template_derive"
path = "child_template_derive_test.rs"

[[test]]
name = "declare_builder"
path = "declare_builder_test.rs"

[[test]]
name = "path_child"
path = "path_child_test.rs"
